// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecommendedArticles> should render RelatedArticles correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-dnqmqq jRkzfi"
  >
    <relatedarticles
      heading="Today's News"
      slice="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`<RecommendedArticles> should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dwiMsX"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
